--- a/ipms-api/.env
+++ b/ipms-api/.env
@@ -28,3 +28,7 @@ APP_SECRET=956ff605dacee0c341e87bd0a268c1a6
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
 DATABASE_URL="mysql://root@127.0.0.1:3306/ipms?serverVersion=8.0.32&charset=utf8mb4"
 ###< doctrine/doctrine-bundle ###
+
+###> nelmio/cors-bundle ###
+CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
+###< nelmio/cors-bundle ###
