--- a/ipms-api/.env
+++ b/ipms-api/.env
@@ -32,3 +32,11 @@ DATABASE_URL="mysql://root@127.0.0.1:3306/ipms?serverVersion=8.0.32&charset=utf8
 ###> nelmio/cors-bundle ###
 CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
 ###< nelmio/cors-bundle ###
+
+###> lexik/jwt-authentication-bundle ###
+JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
+JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
+JWT_PASSPHRASE="allen1129"
+APP_PUBLIC_KEY_PATH=%kernel.project_dir%/config/jwt/public.pem
+APP_PASSPHRASE="allen1129"
+###< lexik/jwt-authentication-bundle ###
