--- a/ipms-api/composer.json
+++ b/ipms-api/composer.json
@@ -11,6 +11,7 @@
         "doctrine/doctrine-bundle": "^2.12",
         "doctrine/doctrine-migrations-bundle": "^3.3",
         "doctrine/orm": "^3.1",
+        "lexik/jwt-authentication-bundle": "*",
         "nelmio/api-doc-bundle": "^4.25",
         "nelmio/cors-bundle": "^2.4",
         "symfony/console": "6.4.*",
@@ -18,6 +19,7 @@
         "symfony/flex": "^2",
         "symfony/framework-bundle": "6.4.*",
         "symfony/runtime": "6.4.*",
+        "symfony/security-bundle": "6.4.*",
         "symfony/yaml": "6.4.*"
     },
     "config": {
@@ -69,6 +71,7 @@
         }
     },
     "require-dev": {
+        "doctrine/doctrine-fixtures-bundle": "*",
         "symfony/maker-bundle": "^1.57"
     }
 }
